iac/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jumpserver
  labels:
    name: jumpserver
    app.kubernetes.io/name: jumpserver
    app.kubernetes.io/instance: jumpserver
    app.kubernetes.io/version: "4.0"
    app.kubernetes.io/component: namespace
    app.kubernetes.io/part-of: jumpserver
    app.kubernetes.io/managed-by: kubectl
  annotations:
    description: "JumpServer PAM Platform Namespace"
