iac/kubernetes/monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: jumpserver-metrics
  namespace: jumpserver
  labels:
    app.kubernetes.io/name: jumpserver
    app.kubernetes.io/instance: jumpserver
    app.kubernetes.io/component: metrics
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: jumpserver
    app.kubernetes.io/component: application
