iac/kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: jumpserver-application
  namespace: jumpserver
  labels:
    app.kubernetes.io/name: jumpserver
    app.kubernetes.io/instance: jumpserver
    app.kubernetes.io/component: application
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb  # For AWS
    service.beta.kubernetes.io/azure-load-balancer-internal: "false"  # For Azure
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 8070
    targetPort: 8070
    protocol: TCP
    name: websocket
  selector:
    app.kubernetes.io/name: jumpserver
    app.kubernetes.io/component: application
---
apiVersion: v1
kind: Service
metadata:
  name: jumpserver-application-internal
  namespace: jumpserver
  labels:
    app.kubernetes.io/name: jumpserver
    app.kubernetes.io/instance: jumpserver
    app.kubernetes.io/component: application-internal
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 8070
    targetPort: 8070
    protocol: TCP
    name: websocket
  selector:
    app.kubernetes.io/name: jumpserver
    app.kubernetes.io/component: application
---
apiVersion: v1
kind: Service
metadata:
  name: jumpserver-application-nodeport
  namespace: jumpserver
  labels:
    app.kubernetes.io/name: jumpserver
    app.kubernetes.io/instance: jumpserver
    app.kubernetes.io/component: application-nodeport
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  - port: 8070
    targetPort: 8070
    nodePort: 30070
    protocol: TCP
    name: websocket
  selector:
    app.kubernetes.io/name: jumpserver
    app.kubernetes.io/component: application
